# omakh-Hive

./: .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierrc  ADMIN_COMPONENTS_FIXED.md  ADMIN_DASHBOARD_AUDIT.md  ADMIN_DASHBOARD_AUDIT_AND_FIXES.md  ADMIN_DASHBOARD_FIXES_COMPLETE.md  ADMIN_DASHBOARD_FULL_AUDIT_REPORT.md  ADMIN_KINGDOM_COMPLETE.md  ADMIN_NAV_UPGRADE_COMPLETE.md  ALL_ISSUES_RESOLVED.md  ALL_PHASES_COMPLETE.md  APPLY_FRONTEND_FIXES.md  AUTOMATED_DATA_PIPELINE.md  AUTONOMOUS_INTEGRATION_COMPLETE.md  AUTONOMOUS_SELF_HEALING_COMPLETE.md  AUTONOMOUS_SYSTEM_IMPLEMENTATION_PLAN.md  AUTO_FIX_TROUBLESHOOTING.md  AUTO_FIX_UI_ADDED.md  BACKEND_CODE_REVIEW_ISSUES.md  BACKEND_FIXES_APPLIED.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_STARTUP_OPTIMIZATION.md  BUGS_FIXED.md  BUG_FIX_CLAUDE_DASHBOARD.md  BUTTONS_FIXED.md  CHANGELOG.md  CHATFRONTEND.md  CHAT_404_FIX.md  CHAT_AND_CONTRACTS_IMPLEMENTATION.md  CHAT_ENDPOINTS_FIX.md  CHAT_FIX_COMPLETE.md  CLAUDE_ANALYSIS_VERIFICATION_TODO.md  CLAUDE_CODEBASE_REVIEW_PROTOCOL.md  CLAUDE_DEVELOPMENT_CAPABILITY_ANALYSIS.md  CLAUDE_MEMORY_AND_LEARNING.md  (+259 more)
backend/queen-ai/: .env.example  AUTOSCALING_COMPLETE.md  BLOCKCHAIN_INTEGRATION_STATUS.md  BRIDGE_RECOVERY_SYSTEM.md  CLAUDE_SYSTEM_PROTOCOL.md  CLOUD_AUTOSCALING_GUIDE.md  DATA_BEE_GUIDE.md  DATA_PIPELINE_BEE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUES.md  DEPLOY_NOW.md  DEX_ORACLE_INTEGRATION.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  GCP_DEPLOYMENT_FIXES_COMPLETE.md  GCP_STRATEGY_COMPLETE.md  LIFECYCLE_MANAGEMENT.md  (+273 more)
(+443 files in other folders)
